--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/HatStore/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>TheHat Store</title>
   <script type="module" crossorigin src="/HatStore/assets/index.52ce8fb5.js"></script>
   <link rel="modulepreload" href="/HatStore/assets/vendor.dcfe85a7.js">
   <link rel="stylesheet" href="/HatStore/assets/index.6bb82535.css">
